[migration 9] Docs: a 3.0.0 release-notes page, and every page that was still 2.7-era
The new page is docs/md/release-notes/3.0.0/3.0.0.md, written for whoever operates an NGB instance
rather than for whoever reads the diff: the two mandatory upgrade steps (database conversion, Lucene
reindex - neither of which NGB can do for itself), the platform floors, what was removed and what to
do instead, the changed URLs and paths, packaging, known issues, and why the number is 3.0.0.
2.8.0 keeps its own page, marked never released, with a note that the target identification feature
it describes ships here.

Two of its claims were wrong in the first draft and were fixed by reading the code:

  - The PaLM 2 row said the provider was removed. The google-cloud-aiplatform *dependency* is gone;
    GOOGLE_MED_PALM2 is still in the LLMProvider enum and never had a handler - the server answered
    "GOOGLE_MED_PALM2 is not supported" before the migration too. Nothing that worked stopped
    working, and the row now says that.
  - The SAML row implied an IdP reconfiguration. /saml/login/ngb is where NGB redirects an
    unauthenticated browser; it appears in no metadata and in no IdP registration. Every URL the IdP
    knows is unchanged.

The nav items the plan asked to remove (installation/desktop.md, installation/binaries.md) were
already gone. What nobody had noticed is that docs/README.md - the index the published site is built
from - still linked binaries.md, so the dead link was live. Fixed, along with the release notes and
the two pages Phase 5 added, which it never listed.

Every reference to ngb.opensource.epam.com is dead, not just the /distr one the plan mentions; the
host is NXDOMAIN. Five places, and two of the replacements had to be established rather than
invented:

  - There is a live documentation site: https://epam.github.io/NGB/ is GitHub Pages serving docs/
    from master through Jekyll. It is the released version, not develop, and the README says so.
  - The S